Fixes for QDatetime Mat (more responsive) and QPopup
- QPopup - use scrollbar width for margin and make special case for cover
- QDatetimePicker Mat - allow to fit inside 290px container even if the windows is above md

--- a/src/components/datetime/datetime.mat.styl
+++ b/src/components/datetime/datetime.mat.styl
@@ -9,7 +9,6 @@
   text-align center
   user-select none
   line-height initial
-  min-width 290px
   .modal-buttons
     padding-top 8px
 
@@ -19,10 +18,16 @@
   > div
     color white
 
+.q-datetime-header
+.q-datetime-content
+  min-width 290px
+
 .q-datetime-weekdaystring
   font-size .8rem
   background rgba(0, 0, 0, .1)
   padding 5px 0
+  width 100%
+  margin-bottom -10px
 
 .q-datetime-time
   padding 10px 0
@@ -237,11 +242,11 @@ for $pos in 13..23
   .q-datetime-ampm
     margin-left 1.5rem
   .q-datetime-datestring .q-datetime-link
-    margin 10px 5px
+    margin 5px
+    &.small
+      margin-top 1.3rem
     span
       padding 10px 5px
-      &.small
-        margin-top 1.3rem
   .q-datetime
     &:not(.no-border)
       &:not(.q-datetime-dark) .q-datetime-content
@@ -255,8 +260,6 @@ for $pos in 13..23
         border 1px solid var(--q-color-dark)
 
 @media (min-width $breakpoint-md-min)
-  .q-datetime:not(.q-datetime-minimal)
-    min-width 170px * 3
   .q-datetime-datestring
     padding 10px 0
   .q-datetime-ampm
@@ -265,11 +268,10 @@ for $pos in 13..23
       margin 2px 0
   .q-datetime-header
     position relative
-  .q-datetime-weekdaystring
-    position absolute
-    top 0
-    left 0
-    right 0
+    flex 1 1 170px !important
+    min-width 170px
+  .q-datetime-content
+    flex 2 2 290px !important
   .q-datetime
     &:not(.no-border)
       &:not(.q-datetime-dark) .q-datetime-content
